feat: add landing page and improve match query with location-based search
- Add mobile landing page at / with service intro, features, and CTA
- Move app home to /home route, update all internal navigation
- Add location-based match query with distance, sort, pagination support
- Add nginx reverse proxy config for production deployment
- Add recruitment status, search distance, sort type value objects
- Add acceptance tests for match query and recruitment status

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>